# minigin

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  emscripten.yml
Data/media/psd/: ENDTUNNEL.psd  VERTICALTUNNLE.psd
Digger/: CMakeLists.txt  FPSComponent.h  Main.cpp  SdlSoundSystem.cpp  SdlSoundSystem.h
Digger/Level/: EmeraldComponent.cpp  EmeraldComponent.h  GoldComponent.cpp  GoldState.cpp  GoldState.h  LevelManager.cpp  LevelManager.h  TileMapComponent.cpp  TileMapComponent.h
Digger/Player/: DeathComponent.cpp  DeathComponent.h  InputManager.cpp  InputManager.h  LifeComponent.cpp  LifeComponent.h  PlayerComponent.cpp  PlayerComponent.h  ScoreComponent.cpp  ScoreComponent.h
Minigin/: CMakeLists.txt  Component.cpp  Component.h  FPSComponent.cpp  FPSComponent.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  LevelManager.cpp  LevelManager.h  Main.cpp  Minigin.cpp  Minigin.h  Observer.cpp  Observer.h  PlayerComponent.cpp  PlayerComponent.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  RotateAroundPivotComponent.cpp  RotateAroundPivotComponent.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ServiceLocator.cpp  ServiceLocator.h  SoundSystem.h  TextComponent.cpp  TextComponent.h  TextureComponent.cpp  TextureComponent.h  TileMapComponent.cpp  TileMapComponent.h  Transform.cpp  Transform.h  TrashTheCashComponent.cpp  (+3 more)
